testsuite/tests/checks/address_attribute_for_non_volatile_objects/test.out
address_attribute_for_non_volatile_objects.ads:7:32: error: address attribute for non-volatile object
7 |    Y : Integer with Address => Var2'Address;   --  FLAG
  |                                ^^^^^^^^^^^^ 

